<resources>
    <string name="app_name">The Time Condo</string>

    <string name="maint">แจ้งซ่อม</string>
    <string name="post">พัสดุ</string>
    <string name="announ">ประกาศ</string>
    <string name="total">ค่าน้ำ</string>

    <!--prem-->
    <string name="str_des_maint">เลือกรายการที่ต้องการซ่อม</string>
    <string name="str_checkBox_aircon">เครื่องปรับอากาศ</string>
    <string name="str_checkBox_stove">เตาไฟฟ้า</string>
    <string name="str_checkBox_electric">ระบบไฟฟ้า</string>
    <string name="str_checkBox_water">ระบบน้ำประปา</string>
    <string name="str_checkBox_pipe">ระบบท่อ</string>
    <string name="str_checkBox_bathroom">สุขภัณฑ์</string>
    <string name="str_input_tel">**กรุณากรอกเบอร์ติดต่อกลับ</string>
    <string name="str_input_other">กรุณาระบุปัญหา</string>
    <string name="str_checkBox_other">อื่นๆ</string>
    <!--endprem-->

    <!--PLENG-->
    <string name="Add">เพิ่มพัสดุ</string>
    <string name="Delete">ลบพัสดุ</string>
    <string name="Search">ค้นหาพัสดุ</string>
    <color name="BackGround">#FFF8F8</color>
    <string name="btn_scan">Scan</string>
    <string name="str_show">Result</string>
    <string name="buildingA">ตึกเอ</string>
    <string name="buildingB">ตึกบี</string>
    <string name="num_parcel">หมายเลขแทรค</string>
    <string name="name_parcel">ชื่อผู้รับพัสดุ</string>
    <string name="transport">บริษัทขนส่ง</string>
    <string name="type_parcel">ชนิดของพัสดุ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="search_main">ค้นหารายละเอียดการแจ้งซ่อม</string>
    <!--ENDPLENG-->

    <!-- hardsai -->
    <string name="profile_image">TODO</string>
    <string name="edit_image">TODO</string>
    <string name="detail_item_announ">Detail</string>
    <string name="title_item_announ">Title</string>
    <!-- END hardsai -->

    <!--chom-->
    <string name="str_textView_now">ยอดปัจจุบัน</string>
    <string name="str_textView_Outstanding">ยอดค้างชำระ</string>
    <string name="str_textView_oldunit">หน่วยเก่า</string>
    <string name="str_textView_nowunit">หน่วยปัจจุบัน</string>
    <string name="B">ตึก B</string>
    <string name="A">ตึก A</string>
    <string name="todo">TODO</string>

    <!--endchom-->

    <!--green-->
    <string name="building_a">ตึก A</string>
    <string name="building_b">ตึก B</string>
    <string name="str_numroom">หมายเลขห้อง</string>
    <string name="str_ownername">ชื่อเจ้าของห้อง</string>
    <string name="str_name">ชื่อ-นามสกุล </string>
    <string name="str_owner_tel">เบอร์โทรเจ้าของห้อง</string>
    <string name="str_tel">เบอร์โทรที่สามารถติดต่อได้</string>
    <string name="str_owner_mail">อีเมลเจ้าของห้อง</string>
    <string name="str_rent_name">ชื่อผู้อาศัย</string>
    <string name="str_rent_tel">เบอร์โทรผู้อาศัย</string>
    <string name="str_rentmail">อีเมลผู้อาศัย</string>
    <string name="str_numcar">เลขทะเบียนรถยนต์</string>
    <string name="str_numone">เลขทะเบียนคันที่1</string>
    <string name="str_numtwo">เลขทะเบียนคันที่2</string>
    <string name="str_nummotorcycle">เลขทะเบียนรถมอเตอร์ไซต์</string>
    <string name="str_confirm">ยืนยัน</string>
    <string name="str_username">ชื่อผู้ใช้งาน</string>
    <string name="str_pass">รหัสผ่าน</string>
    <string name="cost1">xx.xx bath</string>
    <string name="cost2">xx.xx bath</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- firebase -->
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>


</resources>
