<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParcelFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/BuildingA"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/buildingA"
                        android:textSize="15sp"
                        android:layout_marginStart="30dp" />

                    <RadioButton
                        android:id="@+id/BuildingB"
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/buildingB"
                        android:textSize="15sp"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/show_num_room"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/str_numroom"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/num_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/str_numroom"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/show_num_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_parcel"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/num_track"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/num_parcel"
                android:importantForAutofill="no" tools:targetApi="o"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/str_nameOrderParcel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_parcel"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/nameOrderParcel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name_parcel"
                android:layout_marginLeft="20dp"
                android:importantForAutofill="no" tools:targetApi="o"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/typeParcel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_parcel"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <Spinner
                android:id="@+id/TypeParcel_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

            <Spinner
                android:id="@+id/Transport_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/confirmParcelBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"/>


        </LinearLayout>

    </ScrollView>


</FrameLayout>