<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="13dp"
        android:text="@string/str_textView_now"
        app:layout_constraintBottom_toTopOf="@+id/show_cost_now"
        app:layout_constraintStart_toStartOf="@+id/roomnum"
        app:layout_constraintTop_toBottomOf="@+id/roomnum" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="23dp"
        android:text="@string/str_textView_Outstanding"
        app:layout_constraintBottom_toTopOf="@+id/show_cost_outstanding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_cost_now" />

    <EditText
        android:id="@+id/roomnum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="43dp"
        android:layout_weight="1"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/searchbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/show_cost_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:text="@string/cost1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/show_cost_outstanding"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="150dp"
        android:text="@string/cost2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <SearchView
        android:id="@+id/searchbtn"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/roomnum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roomnum" />

</android.support.constraint.ConstraintLayout>

